<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textView"
            android:padding="24dp"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score" />

        <TextView
            android:id="@+id/scored"
            android:padding="24dp"
            android:text="@string/_5"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/total"
            android:padding="24dp"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/out_of_10" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1">

        <TextView
            android:id="@+id/cmTimer"
            android:layout_width="245dp"
            android:layout_height="142dp"


            android:layout_marginLeft="85dp"
            android:padding="16dp"
            android:text=""
            android:textSize="20sp" />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="0dp"
           />

        <Button
        android:id="@+id/done_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corners"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/done" />
    </FrameLayout>
</LinearLayout>